# react-native-sss-copy

./: README.md
other-code/Objectherkenning/: helperfunctions.py  objectdetecttest.py  recogniseDigits.py  rectangledetection.py  segodec.py  ssocr.py  test.py  testing-open-cv.ipynb
other-code/test-app/: README.md  app.json  eas.json  package-lock.json  package.json
other-code/test-app/android/app/src/main/: AndroidManifest.xml
other-code/test-app/app/: _layout.tsx  visioncamera.tsx
other-code/test-app/app/(tabs)/: _layout.tsx  test.tsx
react-native-module/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Sss.podspec  package-lock.json  package.json  react-native-sss.sln  react-native-sss.vcxproj  react-native-sss.vcxproj.filters  tsconfig.json  vcpkg.json
react-native-module/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
react-native-module/android/src/main/: AndroidManifest.xml
react-native-module/android/src/main/java/com/sss/: SssModule.kt  SssPackage.kt
react-native-module/cpp/: react-native-sss.cpp  react-native-sss.h
react-native-module/cpp/fast-opencv/: ConvertImage.cpp  ConvertImage.hpp
react-native-module/cpp/jsi-utils/: Promise.cpp  Promise.h  TypedArray.cpp  TypedArray.h
react-native-module/cpp/main/: cascade.xml  console.cpp  debugfunctions.cpp  debugfunctions.hpp  helperfunctions.cpp  helperfunctions.hpp  imageprocessing.cpp  imageprocessing.hpp  mainfunctions.cpp  mainfunctions.hpp  objectdetect.cpp  objectdetect.hpp
react-native-module/example/: app.json  package.json
react-native-module/example/android/: settings.gradle
react-native-module/example/android/app/: build.gradle
react-native-module/example/ios/: Podfile
react-native-module/example/ios/SssExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
react-native-module/example/ios/SssExample.xcodeproj/: project.pbxproj
react-native-module/example/src/: App.tsx
react-native-module/ios/: Sss.h  Sss.mm
react-native-module/src/: NativeSss.ts  index.tsx
react-native-module/src/functions/: functions.ts
(+7 files in other folders)
